# Online-Judge-Project-AlgoUniversity

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  test_file.py
compilers/: apps.py  base.py  models.py  python_compiler.py  service.py  tests.py  urls.py  views.py
compilers/migrations/: 0001_initial.py
online-judge-frontend/: README.md  index.html  package-lock.json  package.json  server.py
online-judge-frontend/components/: navbar.html
online-judge-frontend/pages/: leaderboard.html  login.html  problem-detail.html  problems.html  register.html  submissions.html  verdict.html
online_judge/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
problems/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
problems/migrations/: 0001_initial.py  0002_initial.py  0003_problem_url.py  0004_alter_problem_author.py
solutions/: apps.py  competitive_scraper.py  cses_problems.json  generated_tests.json  models.py  solution_generator.py  tasks.py  test.py  test_generator.py  tests.py  urls.py  views.py
solutions/cses_sample_tests/: 1068_Weird_Algorithm_samples.json  1069_Repetitions_samples.json  1070_Permutations_samples.json  1081_Common_Divisors_samples.json  1083_Missing_Number_samples.json  1084_Apartments_samples.json  1087_Shortest_Subsequence_samples.json  1090_Ferris_Wheel_samples.json  1091_Concert_Tickets_samples.json  1094_Increasing_Array_samples.json  1095_Exponentiation_samples.json  1134_Prüfer_Code_samples.json  (+76 more)
users/: admin.py  auth.py  authentication.py  models.py  tests.py  urls.py  views.py
(+121 files in other folders)
