[tool.poetry]
name = "online-judge"
version = "0.1.0"
description = "A Django-based online judge system for programming problems"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
celery = "^5.3.1"
redis = "^4.6.0"
PyJWT = "^2.8.0"
psycopg2-binary = "^2.9.7"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.5"
memory-profiler = "^0.61.0"
pylint = "^2.17.5"
selenium = "^4.0"
webdriver-manager = "3.8.6"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0" 
google-generativeai = "0.3.0"
decouple = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
coverage = "^7.2.7"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "online_judge.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
testpaths = [
    "tests",
    "compilers",
    "problems",
    "solutions",
    "users"
]